--- a/translation/ru.json
+++ b/translation/ru.json
@@ -24,7 +24,7 @@
         "categories": {
             "knifes": "Ножи",
             "pistols": "Пистолеты",
-            "rifles": "Винтовки",
+            "rifles": "Штурмовые винтовки",
             "smg": "Smg",
             "machine_guns": "Пулеметы",
             "sniper_rifles": "Снайперские винтовки",
