--- a/translation/ru.json
+++ b/translation/ru.json
@@ -1,5 +1,5 @@
 {
-    "website_name": "LielXD CS2 Server",
+    "website_name": "Fighter's club CS2",
     "invert_direction": false,
     "error": {
         "code": "Произошла ошибка {{code}}!",
