--- a/translation/ru.json
+++ b/translation/ru.json
@@ -10,7 +10,7 @@
         "button": "Вернуться на веб-сайт"
     },
     "login": {
-        "header": "CS2 server by @LBiceps && @s1eepwalkerr:",
+        "header": "CS2 server by LBiceps && s1eepwalkerr:",
         "titles": [
             {"name": "FIGHTER'S CLUB"}
         ],
