--- a/translation/en.json
+++ b/translation/en.json
@@ -14,6 +14,7 @@
         "titles": [
             {"name": "FIGHTER'S CLUB"}
         ],
+        "footer": "please login through Steam to continue ",
         "button": "Login via Steam"
     },
     "skins": {
